maded the update chart function properly

--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
           <div class="dropdown">
             <button name="line" class="dropbtn">Default</button>
             <div class="dropdown-content">
-              <a onclick="selectedDropdown(event)" name="line">Default</a>
-              <a onclick="selectedDropdown(event)" name="bar">Bar</a>
-              <a onclick="selectedDropdown(event)" name="doughnut">Doughnut</a>
-              <a onclick="selectedDropdown(event)" name="polarArea"
-                >PolarArea</a
-              >
-              <a onclick="selectedDropdown(event)" name="radar">Radar</a>
+                <a name="line">Default</a>
+                <a name="bar">Bar</a>
+                <a name="doughnut">Doughnut</a>
+                <a name="polarArea">PolarArea</a>
+                <a name="radar">Radar</a>
             </div>
-          </div>
+        </div>
           <!-- End -->
           <input id="input" type="text" placeholder="Enter a city name" />
           <button id="button" class="button" onclick="getWeather()">GO</button>
