--- a/About.html
+++ b/About.html
@@ -18,14 +18,14 @@
       <!-- About Us Section -->
       <div class="about-section">
         <h1>About WeatherNow</h1>
-        <p>
+        <p id="p1">
           Welcome to WeatherNow, your go-to destination for real-time weather
           information. We are passionate about providing you with the most
           accurate and up-to-date weather data for any city around the world.
         </p>
 
         <h2>Our Mission</h2>
-        <p>
+        <p id="p2">
           Our mission is to make it easy for you to access essential weather
           information, whether you're planning your day or traveling to a new
           location. WeatherNow is designed to keep you informed about the
@@ -33,7 +33,7 @@
         </p>
 
         <h2>Key Features</h2>
-        <ul>
+        <ul id="list">
           <li>Instantly check the weather in any city.</li>
           <li>
             Get detailed information such as temperature, humidity, wind speed,
