Changed contributors pic frame

--- a/contributors.html
+++ b/contributors.html
@@ -26,6 +26,7 @@
               <img
                 width="64"
                 height="64"
+                border-radius="50%"
                 src="https://img.icons8.com/external-victoruler-linear-colour-victoruler/64/external-boy-children-avatar-victoruler-linear-colour-victoruler-1.png"
                 alt="external-boy-children-avatar-victoruler-linear-colour-victoruler-1"
               />
@@ -49,7 +50,7 @@
     </div>
 
     <div class="content" id="cards">
-      <!-- Contributors Card
+      <!-- Contributors Card 
       <div class="card">
         <div class="card-body">
           <div class="left">
@@ -136,6 +137,34 @@
           </div>
         </div>
       </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/girl.png"
+                alt="girl"
+              />
+            </div>
+            <div class="card-text">
+              <h2>Deeksha Shakyawal</h2>
+              <p>
+                Contributed to the page you are looking at right now
+              </p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+            <a href="https://github.com/Deekshashakyawal"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
+        </div>
+      </div>
 
       <div class="card">
         <div class="card-body">
@@ -193,8 +222,8 @@
             /></a>
           </div>
         </div>
-      </div> -->
-
+      </div> 
+-->
       <!-- Add your card above this and leave a blank line -->
 
       <!-- if you're girl then use this card -->
@@ -311,7 +340,7 @@
               <div class="card-body">
                 <div class="left">
                   <div class="card-img">
-                    <img
+                    <img class="img"
                       width="48"
                       height="48"
                       src="${contributor.avatar_url}"
