--- a/contributors.html
+++ b/contributors.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beautiful Card Example</title>
+    <title>Contributors</title>
     <link rel="stylesheet" href="./css/contri-style.css" />
   </head>
 
@@ -106,33 +106,34 @@
           </div>
         </div>
 
-        <div class="card">
-          <div class="card-body">
-            <div class="card-img">
-              <img
-                width="48"
-                height="48"
-                src="https://img.icons8.com/doodle/48/boy.png"
-                alt="boy"
-              />
-            </div>
-            <div class="card-text">
-              <h2>Devrishi Dutta</h2>
-              <p>
-                Contributed a line graph that gives the hourly forecast of the
-                given input city
-              </p>
-            </div>
-            <div class="seperator"></div>
-            <div class="card-icon">
-              <a href="https://github.com/Devrishi-Dutta"
-                ><img
-                  width="100"
-                  height="100"
-                  src="https://img.icons8.com/clouds/100/github.png"
-                  alt="github"
-              /></a>
-            </div>
+        
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="card-img">
+            <img
+              width="48"
+              height="48"
+              src="https://img.icons8.com/doodle/48/boy.png"
+              alt="boy"
+            />
+          </div>
+          <div class="card-text">
+            <h2>Devrishi Dutta</h2>
+            <p>
+              Contributed a line graph that gives the hourly forecast of the
+              given input city
+            </p>
+          </div>
+          <div class="seperator"></div>
+          <div class="card-icon">
+            <a href="https://github.com/Devrishi-Dutta"
+              ><img
+                width="100"
+                height="100"
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
           </div>
         </div>
       </div>
@@ -187,6 +188,36 @@
             <div class="seperator"></div>
 
             <a href="https://github.com/ibrahimrehman1"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/boy.png"
+                alt="boy"
+              />
+            </div>
+            <div class="card-text">
+              <h2>Nilesh Kumar</h2>
+              <p>
+                Contributed in adding a attractive color scheme and corrected alignment and margin of button with relevant transistion on hover
+              </p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+
+            <a href="https://github.com/nileshkr022"
               ><img
                 src="https://img.icons8.com/clouds/100/github.png"
                 alt="github"
@@ -260,8 +291,8 @@
       </div> -->
     </div>
 
-    <div class="back">
-      <a href="./" class="button bottom-btn">BACK</a>
+    <div class="back ">
+      <button href="./" class="bottom-btn">BACK</button>
     </div>
     <!-- footer -->
     <footer>
