--- a/contributors.html
+++ b/contributors.html
@@ -292,7 +292,7 @@
     </div>
 
     <div class="back ">
-      <button href="./" class="bottom-btn">BACK</button>
+      <a href="./" class="bottom-btn">BACK</a>
     </div>
     <!-- footer -->
     <footer>
