--- a/About.html
+++ b/About.html
@@ -7,14 +7,18 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="navwrapper">
+            <nav class="navbar">
+                <a href="index.html">Home</a>
+                <a href="./contributors.html">Contributors</a>
+                <a href="#">About</a>
+            </nav>
+        </div>
+
     <div class="content">
         <!-- Navbar -->
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="./contributors.html">Contributors</a>
-            <a href="#">About</a>
-        </nav>
-
+        
         <!-- About Us Section -->
         <div class="about-section">
             <h1>About WeatherNow</h1>
@@ -53,5 +57,6 @@
     </div>
 
     <script src="./js/script.js"></script>
+</div> 
 </body>
 </html>
