--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         <!-- Popular City Name  -->
         <datalist id="cities">
+          <!-- <option value="CurrentLocation"> -->
           <option value="Bangalore">
           <option value="Beijing">
           <option value="Chicago">
@@ -75,17 +76,31 @@
         </datalist>
         <!-- Input End -->
 
-        <button id="button" class="button" onclick="getWeather()"> <span class="button-text">Go</span>
-          <img class="arrow" src="https://img.icons8.com/ios-filled/24/ffffff/long-arrow-right.png"
-            alt="arrow"></button>
+        
+        <button id="button" class="button" onclick="getWeather()">
+          <span class="button-text">Go</span>
+          <img class="arrow" src="https://img.icons8.com/ios-filled/24/ffffff/long-arrow-right.png" alt="arrow">
+        </button>
+
       </div>
 
+
+      <!-- Current Weather Location -->
+      <button id="currloc_button" onclick="getCurrLoc()">Use My Current Location</button>
+      <br><br>
+      <div id="weather-info"></div>
+
+
+      <!-- Displaying weather info  -->
       <div class="result-container" style="display: none">
         <div id="loader" class="loader"></div>
         <div id="result" class="result-box" style="display: none"></div>
       </div>
       <canvas id="hourlyChart" width="400" height="200"></canvas>
+      
     </div>
+
+
 
     <!-- footer -->
     <footer>
@@ -106,6 +121,8 @@
 
   <!-- scripts -->
   <script src="./js/script.js" type="module"></script>
+  <script src="./js/geolocation.js" type="module"></script> 
+
 </body>
 
 </html>
