--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="form">
         <!-- DropDown Menu -->
         <div class="dropdown">
-          <button name="line" class="dropbtn">Default</button>
+          <button name="line" class="dropbtn" id="button">Default</button>
           <div class="dropdown-content">
             <a name="line">Default</a>
             <a name="bar">Bar</a>
