--- a/About.html
+++ b/About.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <a href="https://www.freecounterstat.com" title="hit counters"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=2sq9zw3ae1gtc4d11ftb1eqnem7nl57y" border="0" title="hit counters" alt="hit counters"></a>
     <title>About WeatherNow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/about-style.css" />
