--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <a href="https://www.freecounterstat.com" title="hit counters"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=2sq9zw3ae1gtc4d11ftb1eqnem7nl57y" border="0" title="hit counters" alt="hit counters"></a>
   <title>WeatherNow</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
