fix: current location button styling

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
       <!-- Current Weather Location -->
-      <button id="currloc_button" onclick="getCurrLoc()">Use My Current Location</button>
+      <button id="currloc_button" onclick="getCurrLoc()">Use Current Location</button>
       <br><br>
       <div id="weather-info"></div>
 
