Major Card Updates

--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 
       <!-- Current Weather Location -->
       <button id="currloc_button" onclick="getCurrLoc()">Use My Current Location</button>
-      <br><br>
       <div id="weather-info"></div>
 
 
@@ -95,9 +94,9 @@
       <div class="result-container" style="display: none">
         <div id="loader" class="loader"></div>
         <div id="result" class="result-box" style="display: none"></div>
-        <button id="km_btn" style="display: none;">Know More</button>
+        <!-- <button id="km_btn" style="display: none;">Know More</button> -->
       </div>
-      <br><br><br>
+      <br><br>
       <canvas id="hourlyChart" width="400" height="200"></canvas>
     
     
