--- a/About.html
+++ b/About.html
@@ -4,6 +4,7 @@
 <head>
     <title>About WeatherNow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./css/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/about-style.css" />
 </head>
 
