--- a/contributors.html
+++ b/contributors.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contributors List</title>
+    <link rel="icon" href="./css/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/contri-style.css" />
   </head>
 
