--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
+  <link rel="stylesheet" href="C:\Users\91784\Desktop\weather\WeatherNow\css\review.css" />
+  <link rel="stylesheet" href="WeatherNow/css/contact.css" />
   <script src="https://kit.fontawesome.com/170b2fd3fe.js" crossorigin="anonymous"></script>
 
   <!-- Loader -->
@@ -30,6 +31,8 @@
           <a href="./contributors.html">Contributors</a>
         </li>
         <li class="nav-item"><a href="./About.html">About</a></li>
+        <li class="nav-item"><a href="./contact.html">Contact</a></li>
+        <li class="nav-item"><a href="./review.html">Review</a></li>
       </ul>
     </nav>
 
@@ -122,6 +125,7 @@
   <!-- scripts -->
    
   <script src="./js/geolocation.js" type="module"></script> 
+   <script src="./js/review.js" type="module"></script>
   <script src="./js/script.js" type="module"></script>
 
 </body>
