feat: AQI value added

--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
 
   <!-- scripts -->
 
-  <script src="./js/geolocation.js" type="module"></script>
+  <!-- <script src="./js/geolocation.js" type="module"></script> -->
   <script src="./js/script.js" type="module"></script>
+  <script src="./js/geolocation.js" type="module"></script>
 
 </body>
 
