Unify navbar styles

--- a/About.html
+++ b/About.html
@@ -12,9 +12,11 @@
     <div class="content">
         <!-- Navbar -->
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="./contributors.html">Contributors</a>
-            <a href="#">About</a>
+            <ul class="nav-list">
+              <li class="nav-item"><a href="./index.html">Home</a></li>
+              <li class="nav-item"><a href="./contributors.html">Contributors</a></li>
+              <li class="nav-item"><a href="#l">About</a></li>
+            </ul>
         </nav>
 
         <!-- About Us Section -->
