--- a/About.html
+++ b/About.html
@@ -70,7 +70,7 @@
         </ul>
 
         <h2>Contributors</h2>
-        <p>
+        <p class="container">
             WeatherNow is made possible by a team of dedicated contributors who are passionate
             about weather data and technology. We couldn't do it without their hard work and
             expertise. <a href="./contributors.html">Learn more about our contributors here</a>
