--- a/About.html
+++ b/About.html
@@ -77,15 +77,30 @@
         </p>
     </main>
 
-    <footer>
+    <!-- <footer>
         <p>
             <span class="light-text">WeatherNow is a weather application that displays the weather of any city.</span>
             <br />
             © Roy™ <span id="copyrightYear"></span>
         </p>
-    </footer>
+    </footer> -->
+    <footer>
+        <div class="footer">
+          <div class="footer-content">
+            <div class="footer-section about">
+              <p class="light-text">
+                <span class="light-text">WeatherNow is a weather application that displays the weather
+                  of any city.</span>
+                <br />
+                © Roy™ <span id="copyrightYear"></span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
 
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/script.js" type="module"></script>
 </body>
 
 </html>
