added two more options for dropdown

--- a/contributors.html
+++ b/contributors.html
@@ -318,7 +318,7 @@
     </footer>
     <script>
       // GitHub API URL for the repository contributors
-      const repoOwner = "R0Y15"; // Replace with your repo owner
+      const repoOwner = "Amit-Verma5262"; // Replace with your repo owner
       const repoName = "WeatherNow"; // Replace with your repository name
       const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contributors`;
 
