--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
           <option value="Noida">
           <option value="New York">
           <option value="Tokyo">
+          <option value="Mysore">
+          <option value="Varansi">
         </datalist>
         <!-- Input End -->
 
