Added four cities in datalist

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
           <option value="Tokyo">
           <option value="Mysore">
           <option value="Varansi">
+          <option value="Hyderabad">
+          <option value="Los Angeles">
+          <option value="Pune">
+          <option value="London">
         </datalist>
         <!-- Input End -->
 
